Fixing Sonar warnings